...
                    android:id="@+id/imageButton_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/editText_recipe_title_create_recipe_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/enter_recipe_title"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@={createRecipeViewModel.title}" />

...
                        android:textAlignment="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText_preparing_time_create_recipe_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="7"
                        android:hint="@string/enter_preparing_time"
                        android:inputType="number"
...
                        android:paddingRight="10dp"
                        android:text="Backzeit: "
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText_cooking_time_create_recipe_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="8"
                        android:hint="@string/enter_cooking_time"
                        android:inputType="number"
...
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/portions_headline" />

                    <EditText
                        android:id="@+id/editText_portions_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/portion_amount"
                        android:inputType="number"
                        android:padding="10dp"
...
                                   />
                            </LinearLayout>

                    </LinearLayout>

                <EditText
                    android:id="@+id/editText_ingredients_create_recipe_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/ingredient_input_description"
                    android:inputType="textMultiLine"
                    android:text="@={createRecipeViewModel.ingredients}"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <EditText
                    android:id="@+id/editText_preparation_description_create_recipe_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/preparation_description"
...
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <CheckBox
                        android:id="@+id/checkBox_publish_create_recipe_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{createRecipeViewModel.tagCheckBoxPublish}"
                        android:text="@string/publish" />

                </LinearLayout>
...
